# epd-reader

./: Cargo.toml  DESIGN.md  README.md  partitions.csv  rust-toolchain.toml
.cargo/: config.toml
doc/: 01-项目全景.md  02-硬件抽象与SPI总线共享.md  03-电子墨水屏驱动与渲染架构.md  04-Embassy异步运行时与事件驱动.md  05-WiFi网络与HTTP通信.md  06-数据持久化与文件系统.md  07-低功耗设计与电源管理.md  08-UI组件化与页面系统.md  09-错误处理与调试.md  10-esp-hal迁移实战.md
files/: config.html
src/: battery.rs  display.rs  epd2in9_txt.rs  event.rs  flash_sleep.rs  location.rs  main.rs  panic.rs  random.rs  request.rs  sd_mount.rs  sleep.rs  storage.rs  txt_reader.rs  utils.rs  weather.rs  web_service.rs  wifi.rs  worldtime.rs
src/model/: holiday.rs  lunar.rs  mod.rs  open_meteo.rs  seniverse.rs  stock.rs
src/pages/: calendar_page.rs  debug_page.rs  image_page.rs  main_page.rs  mod.rs  read_menu_page.rs  read_page.rs  setting_page.rs  weather_page.rs
src/pages/calendar/: draw_utils.rs  layout_264x176.rs  layout_400x300.rs  mod.rs  page.rs  render_data.rs
src/pages/read/: layout_128x296.rs  layout_176x264.rs  layout_400x300.rs  mod.rs  page.rs
src/pages/stock/: layout.rs  mod.rs  page.rs  render_data.rs
src/pages/weather/: draw_utils.rs  layout_264x176.rs  layout_400x300.rs  mod.rs  page.rs  render_data.rs
src/widgets/: battery.rs  calendar.rs  draw_icon.rs  icon_grid_widget.rs  kline.rs  list_widget.rs  mod.rs  qrcode_widget.rs  temp_chart.rs  weather_icon.rs
tools/: bmp_converter.py  convert_default_sleep.py  download_weather_icons.py
tools/.claude/: settings.local.json
