[package]
name = "epd-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-hal = { version = "1.1.0", features = ["esp32c3", "unstable", "log-04"] }
esp-backtrace = { version = "0.19.0", features = ["esp32c3", "println"] }
esp-println = { version = "0.17.0", features = ["esp32c3", "log-04"] }
esp-radio = { version = "0.18.0", features = ["esp32c3", "wifi", "log-04", "unstable"] }
esp-storage = { version = "0.9.0", features = ["esp32c3"] }
esp-rtos = { version = "0.3.0", features = ["esp32c3", "embassy", "esp-radio", "log-04"] }
esp-alloc = { version = "0.10.0", features = ["esp32c3", "global-allocator"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c3"] }

embedded-storage = "0.3.1"
embedded-graphics = "0.8"
embedded-layout = { version = "0.4", default-features = false }
embedded-text = "0.7.2"
u8g2-fonts = { version = "0.7.1", features = ["embedded_graphics_textstyle"] }

static_cell = { version = "2.1.0", features = ["nightly"] }
critical-section = "1.2"
futures = { version = "0.3.30", default-features = false, features = ["alloc"] }

embassy-executor = { version = "0.10.0", features = ["nightly"] }
embassy-time = "0.5.0"
embassy-net = { version = "0.9.0", features = ["dhcpv4", "medium-ethernet", "tcp", "dns", "udp"] }
embassy-futures = "0.1.2"
embassy-sync = "0.8"

embedded-hal = "1.0.0"
embedded-io-async = "0.7"
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.3", features = ["async"] }
time = { version = "0.3", default-features = false, features = ["alloc", "rand", "macros", "parsing", "serde"] }
log = "0.4.21"
heapless = { version = "0.8", default-features = false, features = ["serde"] }
reqwless = { version = "0.14.0", default-features = false }
embedded-tls = { version = "0.18", default-features = false }
sntpc = { version = "0.3", features = ["async"], default-features = false }
no-std-net = "0.6"
rand_core = { version = "0.6.4", default-features = false, features = ["alloc"] }
micromath = "2.1.0"
eg-seven-segment = "0.2"
qrcodegen-no-heap = "1.8"
dhcparse = { version = "1.0.0", default-features = false }
httparse = { version = "1.9.3", default-features = false }
embedded-sdmmc = "0.9.0"
tinybmp = "0.6"

epd-waveshare = { git = "https://github.com/longxiangam/epd-waveshare-modify" }
mini-json = { git = "https://github.com/longxiangam/mini-json" }

[features]
epd2in9 = []
epd4in2 = []
enable_debug = []
weather-openmeteo = []

[profile.release]
opt-level = "s"
